@@ -46,12 +46,12 @@ http://lists.freedesktop.org/archives/systemd-devel/2015-April/030175.html
  Makefile.am                        |  14 +
  man/systemd-fsckd.service.xml      | 162 +++++++++
  po/POTFILES.in                     |   1 +
- src/fsckd/fsckd.c                  | 685 +++++++++++++++++++++++++++++++++++++
+ src/fsckd/fsckd.c                  | 690 +++++++++++++++++++++++++++++++++++++
  units/systemd-fsck-root.service.in |   2 +
  units/systemd-fsck@.service.in     |   3 +-
  units/systemd-fsckd.service.in     |  17 +
  units/systemd-fsckd.socket         |  15 +
- 9 files changed, 910 insertions(+), 1 deletion(-)
+ 9 files changed, 915 insertions(+), 1 deletion(-)
  create mode 100644 man/systemd-fsckd.service.xml
  create mode 100644 src/fsckd/fsckd.c
  create mode 100644 units/systemd-fsckd.service.in
@@ -340,10 +340,10 @@ index f33c53f..4b8ef2e 100644
 +src/fsckd/fsckd.c
 diff --git a/src/fsckd/fsckd.c b/src/fsckd/fsckd.c
 new file mode 100644
-index 0000000..6efb537
+index 0000000..1b12042
 --- /dev/null
 +++ b/src/fsckd/fsckd.c
-@@ -0,0 +1,685 @@
+@@ -0,0 +1,690 @@
 +/*-*- Mode: C; c-basic-offset: 8; indent-tabs-mode: nil -*-*/
 +
 +/***
@@ -900,8 +900,9 @@ index 0000000..6efb537
 +        return 0;
 +}
 +
-+static int run_event_loop_with_timeout(sd_event *e, usec_t timeout) {
++static int run_event_loop_with_timeout(Manager *m, usec_t timeout) {
 +        int r, code;
++        sd_event *e = m->event;
 +
 +        assert(e);
 +
@@ -916,8 +917,12 @@ index 0000000..6efb537
 +                if (r < 0)
 +                        return r;
 +
-+                /* timeout reached */
-+                if (r == 0) {
++                /* Exit if we reached the idle timeout and no more clients are
++                   connected. If there is still an fsck process running but
++                   simply slow to send us progress updates, exiting would mean
++                   that this fsck process receives SIGPIPE resulting in an
++                   aborted file system check. */
++                if (r == 0 && m->n_clients == 0) {
 +                        sd_event_exit(e, 0);
 +                        break;
 +                }
@@ -1018,7 +1023,7 @@ index 0000000..6efb537
 +                goto finish;
 +        }
 +
-+        r = run_event_loop_with_timeout(m->event, IDLE_TIME_SECONDS * USEC_PER_SEC);
++        r = run_event_loop_with_timeout(m, IDLE_TIME_SECONDS * USEC_PER_SEC);
 +        if (r < 0) {
 +                log_error_errno(r, "Failed to run event loop: %m");
 +                goto finish;
